# toy-compiler

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  README.md  README.org  codegen.cpp  codegen.h  corefn.cpp  main.cpp  native.cpp  node.h  parser.y  tokens.l
tools/: findsym
