cmake_minimum_required(VERSION 3.10)
project(toy-compiler)

set(CMAKE_C_COMPILER ${LLVM_DIR}/bin/clang)
set(CMAKE_CXX_COMPILER ${LLVM_DIR}/bin/clang++)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fuse-ld=lld")
# for cataline
if(APPLE)
    if(${CMAKE_SYSTEM_VERSION} VERSION_LESS "10.5")
        message(FATAL_ERROR "Mac OS X 10.5 or later is required.")
    endif()
    set(CMAKE_SHARED_LIBRARY_RUNTIME_C_FLAG "-Wl,-rpath,@loader_path/")
endif()


set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register")

file(GLOB CPPS ${CMAKE_SOURCE_DIR}/*.cpp)

# Find Flex and Bison packages
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)

# Define the Flex and Bison input and output files
flex_target(Scanner tokens.l ${CMAKE_SOURCE_DIR}/tokens.cpp)
bison_target(Parser parser.y ${CMAKE_SOURCE_DIR}/parser.cpp)
add_flex_bison_dependency(Scanner Parser)

# Use customized LLVM
find_package(Clang REQUIRED CONFIG HINTS ${LLVM_DIR} NO_DEFAULT_PATH)

include_directories(${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS} SYSTEM)
link_directories(${LLVM_LIBRARY_DIRS} ${CLANG_LIBRARY_DIRS})

# Add the executable
add_executable(compiler
        ${CPPS}
        ${BISON_Parser_OUTPUTS}
        ${FLEX_Scanner_OUTPUTS}
        )


# A piece of shit codes
target_link_libraries(compiler
#        LLVMCore
#        LLVMX86AsmParser
#        LLVMAArch64AsmParser
#        LLVMAMDGPUAsmParser
#        LLVMAsmParser
#        LLVMARMAsmParser
#        LLVMAArch64CodeGen
#        LLVMARMCodeGen
#        LLVMAMDGPUCodeGen
#        LLVMX86CodeGen
#        LLVMBitWriter
#        LLVMRuntimeDyld
#        LLVMExecutionEngine
#        LLVMMCJIT
        z
        ncurses
        LLVMCFGuard
        MLIRIndexToLLVM
        clangTidyMPIModule
        MLIRDestinationStyleOpInterface
        LLVMMipsInfo
        clangFrontend
        clangToolingRefactoring
        MLIRGPUToSPIRV
        LLVMGlobalISel
        LLVMFileCheck
        MLIRSPIRVModuleCombiner
        LLVMAnalysis
        MLIRFuncTransforms
        MLIRTosaToLinalg
        MLIRLinalgToLLVM
        MLIRControlFlowToSPIRV
        LLVMAArch64AsmParser
        MLIRSCFToSPIRV
        LLVMBPFAsmParser
        clangTidyLinuxKernelModule
        clangToolingASTDiff
        LLVMAArch64Utils
        LLVMMCA
        clangPseudo
        clangTidyPlugin
        MLIRAMXDialect
        clangHandleLLVM
        LLVMMIRParser
        LLVMHexagonAsmParser
        LLVMLanaiDesc
        MLIRLLVMIRTransforms
        MLIRPass
        LLVMSparcDisassembler
        MLIRSCFToOpenMP
        MLIRLinalgDialect
        lldELF
        LLVMMipsAsmParser
        MLIRCAPIIR
        MLIRLoopLikeInterface
        LLVMFuzzerCLI
        LLVMDebugInfoDWARF
        clangTidyBoostModule
        LLVMAVRDisassembler
        LLVMWebAssemblyInfo
        MLIRTranslateLib
        MLIRTableGen
        LLVMHexagonInfo
        clangTidyCERTModule
        LLVMARMCodeGen
        LLVMPowerPCCodeGen
        c++
        MLIRArithTransforms
        MLIRComplexToLibm
        LLVMXRay
        MLIRCAPIControlFlow
        MLIRTensorToSPIRV
        clangTidyAndroidModule
        LLVMMSP430CodeGen
        MLIRTransforms
        MLIRSPIRVBinaryUtils
        LLVMVectorize
        MLIRSupportIndentedOstream
        MLIRBufferizationTransforms
        LLVMHexagonCodeGen
        LLVMVEDesc
        LLVMRISCVTargetMCA
        findAllSymbols
        clangCrossTU
        LLVMObjCopy
        clangReorderFields
        MLIRMemRefTransforms
        LLVMSupport
        LLVMDWP
        LLVMVECodeGen
        LLVMWindowsManifest
        MLIRCAPILinalg
        clangToolingInclusions
        clangdSupport
        LLVMLoongArchAsmParser
        LLVMNVPTXDesc
        MLIRVectorToSPIRV
        LLVMXCoreCodeGen
        LLVMSystemZInfo
        MLIRMemRefToSPIRV
        clangFormat
        LLVMWebAssemblyUtils
        MLIRIndexDialect
        MLIRLLVMDialect
        LLVMCFIVerify
        clangTidyPortabilityModule
        MLIRShapeDialect
        LLVMXCoreInfo
        MLIRNVGPUToNVVM
        MLIROpenMPToLLVMIRTranslation
        clangTidyPerformanceModule
        LLVMAVRDesc
        LLVMARMDisassembler
        clangAPINotes
        MLIRVectorToSCF
        LLVMSparcDesc
        MLIRNVGPUTransforms
        MLIRMLProgramDialect
        clangTidyMain
        MLIRAsyncToLLVM
        clangdRemoteIndex
        lldCOFF
        LLVMAggressiveInstCombine
        MLIRCAPIInterfaces
        LLVMAMDGPUDesc
        clangSupport
        LLVMMSP430AsmParser
        MLIRMlirOptMain
        MLIRCastInterfaces
        MLIRCAPIAsync
        clangIndexSerialization
        MLIRSPIRVToLLVM
        LLVMExtensions
        MLIRSPIRVDialect
        clangTidyOpenMPModule
        LLVMInstCombine
        MLIRPDLInterpDialect
        MLIRMemRefUtils
        LLVMDWARFLinker
        MLIRInferIntRangeCommon
        MLIROpenACCDialect
        clangHandleCXX
        LLVMRISCVDisassembler
        MLIRIR
        clangTidyLLVMLibcModule
        clangDependencyScanning
        LLVMRISCVAsmParser
        clangTidyBugproneModule
        MLIRLinalgUtils
        LLVMIRPrinter
        MLIRMathToLibm
        MLIROpenACCToLLVM
        MLIRLspServerLib
        MLIRTensorDialect
        MLIRAsyncDialect
        LLVMFuzzMutate
        LLVMExegesisMips
        clangDynamicASTMatchers
        clangTransformer
        clangExtractAPI
        clangTidyZirconModule
        clangCodeGen
        LLVMScalarOpts
        MLIRAffineTransforms
        LLVMTextAPI
        MLIRVectorUtils
        MLIRPDLToPDLInterp
        clangSerialization
        LLVMPasses
        LLVMBPFInfo
        MLIRCAPIConversion
        MLIROpenMPDialect
        LLVMLinker
        LLVMObject
        MLIRSPIRVConversion
        MLIRBufferizationToMemRef
        MLIRNVGPUDialect
        MLIRSCFUtils
        LLVMMCJIT
        PollyISL
        LLVMExegesisPowerPC
        MLIRROCDLDialect
        MLIRFromLLVMIRTranslationRegistration
        LLVMDebugInfoLogicalView
        LLVMCore
        MLIRCAPIFunc
        LLVMLoongArchInfo
        LLVMLanaiCodeGen
        LLVMipo
        MLIRInferIntRangeInterface
        MLIRTosaToTensor
        LLVMDWARFLinkerParallel
        MLIRGPUTransforms
        LLVMAArch64Info
        MLIRControlFlowDialect
        MLIRSCFDialect
        MLIRQuantUtils
        LLVMMC
        MLIRSparseTensorTransforms
        LLVMObjCARCOpts
        MLIRExecutionEngine
        clangRewrite
        LLVMCodeGen
        MLIRSPIRVTranslateRegistration
        MLIRMaskableOpInterface
        clangAST
        LLVMTarget
        MLIRDataLayoutInterfaces
        clangIncludeCleaner
        MLIRAffineAnalysis
        LLVMX86AsmParser
        LLVMFrontendOpenACC
        MLIRSparseTensorUtils
        MLIRLinalgAnalysis
        MLIREmitCDialect
        clangAnalysisFlowSensitive
        LLVMDebugInfoPDB
        LLVMMCDisassembler
        MLIRTransformDialectTransforms
        MLIRMemRefToLLVM
        MLIRBufferizationDialect
        clangEdit
        MLIRExecutionEngineUtils
        MLIRGPUToGPURuntimeTransforms
        LLVMX86CodeGen
        LLVMX86Info
        MLIRCAPISCF
        MLIRVectorTransforms
        MLIRBytecodeWriter
        clangPseudoCXX
        LLVMVEDisassembler
        LLVMBPFCodeGen
        MLIRLLVMCommonConversion
        LLVMDebugInfoGSYM
        MLIRShapedOpInterfaces
        LLVMBPFDisassembler
        clangRewriteFrontend
        clangChangeNamespace
        clangLex
        MLIRInferTypeOpInterface
        LLVMRISCVInfo
        LLVMJITLink
        MLIRLinalgTransforms
        unwind
        LLVMBitReader
        LLVMHexagonDisassembler
        clangTidyAlteraModule
        MLIRAffineTransformOps
        MLIRArmSVEDialect
        MLIRPDLLAST
        MLIRComplexToStandard
        LLVMExecutionEngine
        MLIRTosaTransforms
        MLIRShapeOpsTransforms
        MLIRJitRunner
        MLIRTargetCpp
        MLIRParser
        LLVMMSP430Desc
        MLIRCopyOpInterface
        LLVMPowerPCDesc
        lldCommon
        LLVMWebAssemblyAsmParser
        MLIRViewLikeInterface
        MLIRX86VectorToLLVMIRTranslation
        MLIRGPUToNVVMTransforms
        clangBasic
        LLVMSystemZAsmParser
        MLIRParallelCombiningOpInterface
        MLIRTilingInterface
        LLVMLTO
        MLIRVectorToLLVM
        MLIRSPIRVDeserialization
        clangTidyCppCoreGuidelinesModule
        LLVMSystemZCodeGen
        MLIRMemRefDialect
        MLIRSPIRVUtils
        MLIRTargetLLVMIRExport
        MLIRTransformDialect
        LLVMTargetParser
        LLVMRemarks
        LLVMOption
        MLIRVectorDialect
        MLIRSCFToControlFlow
        MLIRNVVMDialect
        LLVMARMDesc
        LLVMX86TargetMCA
        MLIRCAPITensor
        LLVMAMDGPUUtils
        clangAnalysis
        clangIncludeFixerPlugin
        clangTidyGoogleModule
        LLVMPowerPCAsmParser
        MLIRAffineDialect
        MLIRTransformUtils
        LLVMOrcTargetProcess
        MLIRLspServerSupportLib
        LLVMInterfaceStub
        clangStaticAnalyzerCore
        MLIRCAPIPDL
        clangASTMatchers
        MLIRPDLLCodeGen
        clangDoc
        LLVMIRReader
        lldWasm
        LLVMFrontendOpenMP
        clangTidyUtils
        LLVMAArch64Desc
        MLIROpenACCToSCF
        clangTidyHICPPModule
        MLIRArithDialect
        clangDirectoryWatcher
        MLIRPresburger
        LLVMAVRCodeGen
        LLVMWebAssemblyDisassembler
        LLVMLanaiAsmParser
        MLIRMathToSPIRV
        MLIRReduce
        LLVMLoongArchDesc
        clangPseudoCLI
        MLIRCAPITransformDialect
        MLIRAMXToLLVMIRTranslation
        MLIRTransformDialectUtils
        LLVMRISCVCodeGen
        MLIRMathToFuncs
        LLVMBPFDesc
        clangToolingInclusionsStdlib
        MLIRDialectUtils
        MLIRVectorInterfaces
        clangAnalysisFlowSensitiveModels
        MLIRMathTransforms
        LLVMMSP430Disassembler
        clangDriver
        LLVMTransformUtils
        LLVMVEAsmParser
        LLVMLibDriver
        MLIRAffineToStandard
        MLIRTargetLLVMIRImport
        clangTidyConcurrencyModule
        MLIRROCDLToLLVMIRTranslation
        LLVMCoverage
        MLIRTosaDialect
        LLVMARMInfo
        MLIRSideEffectInterfaces
        MLIRNVVMToLLVMIRTranslation
        MLIRComplexToLLVM
        LLVMExegesisAArch64
        MLIRCAPIDebug
        MLIRLinalgTransformOps
        clangParse
        LLVMInterpreter
        MLIRTensorToLinalg
        LLVMFrontendHLSL
        MLIRCAPISparseTensor
        MLIRSCFToGPU
        MLIRControlFlowInterfaces
        MLIRTosaToSCF
        clangIncludeFixer
        MLIRArmNeonToLLVMIRTranslation
        LLVMPowerPCInfo
        LLVMRuntimeDyld
        LLVMMSP430Info
        MLIRTensorTransforms
        MLIRVectorToGPU
        clangMove
        MLIRGPUTransformOps
        MLIRCAPIRegisterEverything
        MLIRVectorTransformOps
        MLIRArmSVEToLLVMIRTranslation
        MLIROpenMPToLLVM
        clangApplyReplacements
        LLVMProfileData
        MLIRTblgenLib
        MLIRAMDGPUToROCDL
        MLIRBufferizationTransformOps
        LLVMSymbolize
        LLVMSelectionDAG
        LLVMRISCVDesc
        MLIRReconcileUnrealizedCasts
        MLIRX86VectorTransforms
        MLIRArithUtils
        MLIRAsmParser
        MLIRFuncToSPIRV
        LLVMExegesisX86
        MLIRPDLLODS
        MLIRLinalgToStandard
        MLIRRuntimeVerifiableOpInterface
        MLIRNVGPUUtils
        MLIRSparseTensorDialect
        MLIRRewrite
        LLVMX86Desc
        clangTidyModernizeModule
        LLVMSparcCodeGen
        LLVMBitWriter
        clangStaticAnalyzerCheckers
        clangTidyLLVMModule
        LLVMVEInfo
        clangQuery
        LLVMObjectYAML
        clangTooling
        LLVMBinaryFormat
        MLIRPDLDialect
        clangTidyAbseilModule
        LLVMMCParser
        MLIRSPIRVTransforms
        MLIROptLib
        MLIRCAPIExecutionEngine
        clangDaemon
        LLVMDebuginfod
        MLIRCAPITransforms
        clangTidyReadabilityModule
        LLVMWebAssemblyDesc
        clangPseudoGrammar
        LLVMHexagonDesc
        LLVMAMDGPUCodeGen
        LLVMX86Disassembler
        MLIRBytecodeReader
        MLIRSCFTransforms
        MLIRDialect
        MLIRQuantDialect
        clangToolingCore
        LLVMDemangle
        LLVMARMAsmParser
        MLIRCAPIShape
        LLVMLanaiDisassembler
        LLVMMipsCodeGen
        MLIRMathDialect
        LLVMLanaiInfo
        MLIRArithToSPIRV
        LLVMOrcJIT
        MLIRReduceLib
        MLIRDLTIDialect
        clangInterpreter
        clangTidyFuchsiaModule
        MLIRSPIRVSerialization
        MLIRSupport
        MLIRDerivedAttributeOpInterface
        clangTidyMiscModule
        LLVMAsmPrinter
        MLIRSparseTensorPipelines
        LLVMExegesis
        LLVMLoongArchDisassembler
        LLVMAArch64Disassembler
        LLVMTableGenGlobalISel
        clangToolingSyntax
        LLVMMipsDesc
        MLIRCallInterfaces
        MLIRGPUOps
        Polly
        MLIRShapeToStandard
        MLIRTosaToArith
        lldMinGW
        LLVMAMDGPUTargetMCA
        LLVMDiff
        MLIRX86VectorDialect
        MLIRSparseTensorRuntime
        MLIRAMDGPUDialect
        MLIROpenACCToLLVMIRTranslation
        LLVMXCoreDisassembler
        LLVMTableGen
        MLIRFuncToLLVM
        MLIRCAPIMLProgram
        LLVMAArch64CodeGen
        lldMachO
        MLIRCAPIGPU
        LLVMCoroutines
        MLIRArithAttrToLLVMConversion
        MLIRTensorTilingInterfaceImpl
        MLIRLLVMIRToLLVMTranslation
        MLIRFuncDialect
        LLVMAVRAsmParser
        MLIRSCFTransformOps
        LLVMPowerPCDisassembler
        LLVMDebugInfoCodeView
        MLIRCAPILLVM
        LLVMNVPTXCodeGen
        clangFrontendTool
        MLIRToLLVMIRTranslationRegistration
        clangTidy
        LLVMAMDGPUInfo
        MLIRAMXTransforms
        LLVMWebAssemblyCodeGen
        LLVMSystemZDisassembler
        MLIRTensorInferTypeOpInterfaceImpl
        MLIRArmNeonDialect
        MLIRControlFlowToLLVM
        MLIRAnalysis
        clangTidyObjCModule
        LLVMSparcInfo
        MLIRArmNeon2dToIntr
        MLIRMaskingOpInterface
        LLVMAMDGPUDisassembler
        MLIRArmSVETransforms
        MLIRLLVMToLLVMIRTranslation
        MLIRComplexDialect
        LLVMLoongArchCodeGen
        clangDaemonTweaks
        LLVMAVRInfo
        clangARCMigrate
        LLVMSparcAsmParser
        LLVMXCoreDesc
        MLIRMemRefTransformOps
        MLIRGPUToVulkanTransforms
        LLVMAsmParser
        LLVMDebugInfoMSF
        LLVMOrcShared
        LLVMSystemZDesc
        MLIRMathToLLVM
        MLIRAsyncTransforms
        LLVMNVPTXInfo
        LLVMBitstreamReader
        LLVMWindowsDriver
        clangStaticAnalyzerFrontend
        clangIndex
        LLVMInstrumentation
        clangSema
        MLIRArithToLLVM
        MLIRAffineUtils
        LLVMDlltoolDriver
        LLVMARMUtils
        clangTidyDarwinModule
        LLVMMipsDisassembler
        MLIRTensorUtils
        MLIRGPUToROCDLTransforms
        MLIRCAPIQuant
        LLVMAMDGPUAsmParser
        )